@@ -3,6 +3,7 @@ Revision history for Database-Abstraction
 0.11
 	Added id parameter
 	Slurp small XML files using XML::Simple
+	Fix uninitialised error when slurp_file doesn't exist
 
 0.10	Thu Sep 19 08:17:55 EDT 2024
 	Added t/init.t
